changed more names

--- a/_posts/2016-05-20-Stuff.md
+++ b/_posts/2016-05-20-Stuff.md
@@ -1,14 +1,9 @@
 ---
  layout: post
- title: Stuff
- permalink: stuff
+ title: Games Made with Processing
+ permalink: Games Made with Processing
 ---
 
-# This is a heading
+# Games
 
-Words and more words and more words
-
-and stuff
-
-
-is this thing on?
+<canvas data-processing-sources="/assets/files/Platformer.pde"></canvas>
