--- a/_posts/2016-10-17-P5.js-Weather-Visualization.md
+++ b/_posts/2016-10-17-P5.js-Weather-Visualization.md
@@ -1,7 +1,7 @@
 ---
  layout: post
- title: Miscellaneous Processing Stuff
- permalink: Miscellaneous Processing Stuff
+ title: P5.js Weather Data Visualization
+ permalink: P5.js Weather Data Visualization
 ---
 
 <canvas data-processing-sources="/Loading_Weather_Data_with_API/sketch.js"></canvas>
