--- a/_posts/2016-10-17-P5.js-Weather-Visualization.md
+++ b/_posts/2016-10-17-P5.js-Weather-Visualization.md
@@ -4,4 +4,9 @@
  permalink: P5.js Weather Data Visualization
 ---
 
-<canvas data-processing-sources="/Loading_Weather_Data_with_API/sketch.js"></canvas>
+<script src="libraries/p5.js" type="text/javascript"></script>
+
+<script src="libraries/p5.dom.js" type="text/javascript"></script>
+<script src="libraries/p5.sound.js" type="text/javascript"></script>
+
+<script src="sketch.js" type="text/javascript"></script>
